--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,14 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.notice {
+  background: lightskyblue;
+  border-radius: 0.5em;
+  border: none;
+  color: darkgreen;
+  font-weight: bold;
+  padding: 1px 1px;
+  margin: 5px 25% 3px 25%;
+  text-align: center;
+}
