--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,7 @@
-<h1>Деталі замовлення на дипломи <%= @order.name %></h1>
+<h3><%= link_to "Назад", root_path %></h3>
+<h1>
+  Деталі замовлення на дипломи <%= @order.name %>
+</h1>
 <p>
   <%= @order.xml_file.download.force_encoding('UTF-8') %>
 </p>
