--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -37,5 +37,10 @@
         </tr>
       <% end %>
     </tbody>
+    <tfoot>
+      <tr>
+        <th colspan="4">Примітка. Zip-файл з дипломами буде надіслано в браузер відповідно до його налаштувань.</th>
+      </tr>
+    </tfoot>
   </table>
 <% end %>
