Add user cookie to Order and change tests

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Підготовка до друку документів про вищу освіту</h1>
 <p>
-  На цьому сайті на основі інформації з замовлень ЄДЕБО (у форматі XML) можна створити<br>
+  На цьому сайті на основі інформації з ЄДЕБО (у форматі XML) можна створити<br>
   файли для друку дипломів молодшого бакалавра, бакалавра, магістра (у форматі Microsoft Word .docx).
 </p>
 
@@ -10,7 +10,7 @@
   <%= f.submit "Надіслати файл на сервер" %>
 <% end %>
 
-<% if @orders.size > 0 %>
+<% if @orders.presence && @orders.size > 0 %>
   <table class="orders">
     <thead>
       <tr>
