--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,5 +3,5 @@
   Деталі замовлення на дипломи <%= @order.name %>
 </h1>
 <p>
-  <%= @order.xml_file.download.force_encoding('UTF-8') %>
+  <pre><%= @order_xml_formatted %></pre>
 </p>
