--- a/app/views/main/demo.html.erb
+++ b/app/views/main/demo.html.erb
@@ -1,12 +1,34 @@
 <h2>Приклади замовлень у форматі XML для демонстрації роботи сервісу "Друк документів про вищу освіту":</h2>
+<% dt_now = Time.now.to_s.gsub(/[^0-9]/,'') %>
 <ul>
-  <li>Замовлення на дублікати дипломів спеціаліста 1 (demo1)
-    <%= link_to "Завантажити", "/demo/demo1.xml", download: "demo1.xml" %>
+  <li>Замовлення на дипломи бакалавра (demo1)
+    <%=
+      link_to "Завантажити", "/demo/demo1.xml",
+              download: "demo1-" +
+                dt_now[0..3] + "-" + dt_now[4..5] + "-" + dt_now[6..7] + "T" + dt_now[8..13] + ".xml"
+    %>
   </li>
   <li>Замовлення на дипломи магістра (demo2)
-    <%= link_to "Завантажити", "/demo/demo2.xml", download: "demo2.xml" %>
+    <%=
+      link_to "Завантажити", "/demo/demo2.xml",
+              download: "demo2-" +
+                dt_now[0..3] + "-" + dt_now[4..5] + "-" + dt_now[6..7] + "T" + dt_now[8..13] + ".xml"
+    %>
   </li>
-  <li>Замовлення на дублікати дипломів спеціаліста 2 (demo3)
-    <%= link_to "Завантажити", "/demo/demo3.xml", download: "demo3.xml" %>
+  <li>Замовлення на дублікати дипломів спеціаліста 1 (demo3)
+    <%=
+      link_to "Завантажити", "/demo/demo3.xml",
+              download: "demo3-" +
+                dt_now[0..3] + "-" + dt_now[4..5] + "-" + dt_now[6..7] + "T" + dt_now[8..13] + ".xml"
+    %>
+  </li>
+  <li>Замовлення на дублікати дипломів спеціаліста 2 (demo4)
+    <%=
+      link_to "Завантажити", "/demo/demo4.xml",
+              download: "demo4-" +
+                dt_now[0..3] + "-" + dt_now[4..5] + "-" + dt_now[6..7] + "T" + dt_now[8..13] + ".xml"
+    %>
   </li>
 </ul>
+
+<p>Після завантаження демо-файлів рекомендовано закрити цю вкладку.</p>
