Add simple check for XML structure

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,3 +28,14 @@ body {
   margin: 5px 25% 3px 25%;
   text-align: center;
 }
+
+.alert {
+  background: lightyellow;
+  border-radius: 0.5em;
+  border: none;
+  color: darkred;
+  font-weight: bold;
+  padding: 1px 1px;
+  margin: 5px 25% 3px 25%;
+  text-align: center;
+}
