--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,3 +1,3 @@
 <% flash.each do |key, message| %>
-  <p class="<%= key %>"><%= message %></p>
+  <p class="<%= key %>"><%= message.html_safe %></p>
 <% end %>
