Add a comment to demo page

--- a/app/views/main/demo.html.erb
+++ b/app/views/main/demo.html.erb
@@ -32,3 +32,7 @@
 </ul>
 
 <p>Після завантаження демо-файлів рекомендовано закрити цю вкладку.</p>
+<h5 class="italic">
+  Відомості про випускників у демо-файлах є вигаданими і призначені тільки для демонстрації роботи web-додатку.
+  Будь-який збіг з реальними даними про фізичних/юридичних осіб є випадковим.
+</h5>
