Fix bachelor blue diploma template and add one demo file

--- a/app/views/main/demo.html.erb
+++ b/app/views/main/demo.html.erb
@@ -1,7 +1,7 @@
 <h2>Приклади замовлень у форматі XML для демонстрації роботи сервісу "Друк документів про вищу освіту":</h2>
 <% dt_now = Time.now.to_s.gsub(/[^0-9]/,'') %>
 <ul>
-  <li>Замовлення на дипломи бакалавра (demo1)
+  <li>Замовлення на дипломи бакалавра 1 (demo1)
     <%=
       link_to "Завантажити", "/demo/demo1.xml",
               download: "demo1-" +
@@ -26,6 +26,13 @@
     <%=
       link_to "Завантажити", "/demo/demo4.xml",
               download: "demo4-" +
+                dt_now[0..3] + "-" + dt_now[4..5] + "-" + dt_now[6..7] + "T" + dt_now[8..13] + ".xml"
+    %>
+  </li>
+  <li>Замовлення на дипломи бакалавра 2 (demo5)
+    <%=
+      link_to "Завантажити", "/demo/demo5.xml",
+              download: "demo5-" +
                 dt_now[0..3] + "-" + dt_now[4..5] + "-" + dt_now[6..7] + "T" + dt_now[8..13] + ".xml"
     %>
   </li>
