--- a/app/views/main/demo.html.erb
+++ b/app/views/main/demo.html.erb
@@ -1,4 +1,4 @@
-<h2>Приклади замовлень у форматі XML для демонстрації роботи сервісу "Друк документів про вищу освіту":</h2>
+<h3>Приклади замовлень у форматі XML для демонстрації роботи сервісу "Друк документів про вищу освіту":</h3>
 <%
   dt_now = Time.now.to_s.gsub(/[^0-9]/,'')
   datetime_for_download = "#{dt_now[0..3]}-#{dt_now[4..5]}-#{dt_now[6..7]}-T#{dt_now[8..13]}"
@@ -24,6 +24,6 @@
 
 <p>Після завантаження демо-файлів рекомендовано закрити цю вкладку.</p>
 <h5 class="italic">
-  Відомості про випускників у демо-файлах є вигаданими і призначені тільки для демонстрації роботи web-додатку.
+  Відомості про випускників у демо-файлах є вигаданими і призначені тільки для демонстрації роботи web-додатку.<br>
   Будь-який збіг з реальними даними про фізичних/юридичних осіб є випадковим.
 </h5>
