--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%=
-      # javacript_pack_tag 'application', 'data-turbolinks-track': 'reload'
-    %>
-
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
   </head>
 
   <body>
