Add the PhD diploma processing

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,8 @@
 <h1>Підготовка до друку документів про вищу освіту</h1>
 <p>
   На цьому сайті на основі інформації з ЄДЕБО (у форматі XML) можна створити<br>
-  файли для друку дипломів молодшого бакалавра, бакалавра, магістра (у форматі Microsoft Word .docx).
+  файли для друку дипломів бакалавра, магістра, доктора філософії,<br>
+  а також дублікатів дипломів спеціаліста (у форматі Microsoft Word .docx).
 </p>
 <%= form_with do |f| %>
   <%= f.label "Виберіть файл замовлення .xml, одержаний з ЄДЕБО:" %>
