Add the PhD diploma demo XML

--- a/app/views/main/demo.html.erb
+++ b/app/views/main/demo.html.erb
@@ -5,20 +5,23 @@
 %>
 
 <ul>
-  <li>Замовлення на дипломи бакалавра 1 (demo1)
+  <li>Замовлення на дипломи бакалавра 1 - demo1
     <%= link_to "Завантажити", "/demo/demo1.xml", download: "demo1-#{datetime_for_download}.xml" %>
   </li>
-  <li>Замовлення на дипломи магістра (demo2)
+  <li>Замовлення на дипломи магістра - demo2
     <%= link_to "Завантажити", "/demo/demo2.xml", download: "demo2-#{datetime_for_download}.xml" %>
   </li>
-  <li>Замовлення на дублікати дипломів спеціаліста 1 (demo3)
+  <li>Замовлення на дублікати дипломів спеціаліста 1 - demo3
     <%= link_to "Завантажити", "/demo/demo3.xml", download: "demo3-#{datetime_for_download}.xml" %>
   </li>
-  <li>Замовлення на дублікати дипломів спеціаліста 2 (demo4)
+  <li>Замовлення на дублікати дипломів спеціаліста 2 - demo4
     <%= link_to "Завантажити", "/demo/demo4.xml", download: "demo4-#{datetime_for_download}.xml" %>
   </li>
-  <li>Замовлення на дипломи бакалавра 2 (demo5)
+  <li>Замовлення на дипломи бакалавра 2 - demo5
     <%= link_to "Завантажити", "/demo/demo5.xml", download: "demo5-#{datetime_for_download}.xml" %>
+  </li>
+  <li>Замовлення на дипломи доктора філософії (PhD) - demo6
+    <%= link_to "Завантажити", "/demo/demo6.xml", download: "demo6-#{datetime_for_download}.xml" %>
   </li>
 </ul>
 
